--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "@emotion/styled": "^11.11.0",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
+    "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.18.0",
+    "zod": "^3.22.4",
+    "zod-formik-adapter": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
