--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "axios": "^1.6.0",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
+    "date-fns": "^2.30.0",
     "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
