--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
+    "sweetalert2": "^11.10.1",
     "zod": "^3.22.4",
     "zod-formik-adapter": "^1.2.0"
   },
