--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
     "sweetalert2": "^11.10.1",
+    "victory": "^36.6.12",
     "zod": "^3.22.4",
     "zod-formik-adapter": "^1.2.0"
   },
