--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-internet-meter": "^1.1.1",
     "react-router-dom": "^6.18.0",
     "sweetalert2": "^11.10.1",
     "victory": "^36.6.12",
