--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap-icons": "^1.11.1",
     "date-fns": "^2.30.0",
     "formik": "^2.4.5",
+    "ldrs": "^1.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
