--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-internet-meter": "^1.1.1",
     "react-router-dom": "^6.18.0",
     "sweetalert2": "^11.10.1",
+    "swr": "^2.2.4",
     "victory": "^36.6.12",
     "zod": "^3.22.4",
     "zod-formik-adapter": "^1.2.0"
