--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-internet-meter": "^1.1.1",
     "react-router-dom": "^6.18.0",
+    "socket.io-client": "^4.7.2",
     "sweetalert2": "^11.10.1",
     "swr": "^2.2.4",
     "victory": "^36.6.12",
