--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "formik": "^2.4.5",
     "ldrs": "^1.0.1",
     "react": "^18.2.0",
+    "react-awesome-reveal": "^4.2.7",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-internet-meter": "^1.1.1",
