--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fullcalendar/core": "^6.1.10",
+    "@fullcalendar/daygrid": "^6.1.10",
+    "@fullcalendar/react": "^6.1.10",
+    "@react-pdf/renderer": "^3.1.14",
     "@tanstack/react-table": "^8.10.7",
     "axios": "^1.6.0",
     "bootstrap": "^5.3.2",
