--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fullcalendar/daygrid": "^6.1.10",
     "@fullcalendar/react": "^6.1.10",
     "@react-pdf/renderer": "^3.1.14",
+    "@reduxjs/toolkit": "^2.0.1",
     "@tanstack/react-table": "^8.10.7",
     "axios": "^1.6.0",
     "bootstrap": "^5.3.2",
@@ -28,6 +29,7 @@
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-internet-meter": "^1.1.1",
+    "react-redux": "^9.0.3",
     "react-router-dom": "^6.18.0",
     "socket.io-client": "^4.7.2",
     "sweetalert2": "^11.10.1",
