refactor: Update ClientesForm component to handle required fields and fix variable names in form inputs

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fullcalendar/core": "^6.1.10",
     "@fullcalendar/daygrid": "^6.1.10",
     "@fullcalendar/react": "^6.1.10",
+    "@react-google-maps/api": "^2.19.3",
     "@react-pdf/renderer": "^3.1.14",
     "@reduxjs/toolkit": "^2.0.1",
     "@tanstack/react-table": "^8.10.7",
