refactor: Update ClientesForm component to handle optional ipAntena field

--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "formik": "^2.4.5",
     "ldrs": "^1.0.1",
     "react": "^18.2.0",
+    "react-autosuggest": "^10.1.0",
     "react-awesome-reveal": "^4.2.7",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-internet-meter": "^1.1.1",
     "react-redux": "^9.0.3",
     "react-router-dom": "^6.18.0",
+    "react-select": "^5.8.1",
     "socket.io-client": "^4.7.2",
     "sweetalert2": "^11.10.1",
     "swr": "^2.2.4",
