feat: Integrate Google Maps for client locations, update ExcustomerTableVisor with styled components, and enhance Excustomers component with client filtering

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-pdf/renderer": "^3.1.14",
     "@reduxjs/toolkit": "^2.0.1",
     "@tanstack/react-table": "^8.10.7",
+    "@vis.gl/react-google-maps": "^1.5.2",
     "axios": "^1.6.0",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
