--- a/package.json
+++ b/package.json
@@ -24,8 +24,13 @@
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
     "date-fns": "^2.30.0",
+    "file-saver": "^2.0.5",
     "formik": "^2.4.5",
+    "jszip": "^3.10.1",
     "ldrs": "^1.0.1",
+    "pdf-lib": "^1.17.1",
+    "pdf2pic": "^3.2.0",
+    "pdfjs-dist": "^3.11.174",
     "react": "^18.2.0",
     "react-autosuggest": "^10.1.0",
     "react-awesome-reveal": "^4.2.7",
@@ -38,6 +43,7 @@
     "socket.io-client": "^4.7.2",
     "sweetalert2": "^11.10.1",
     "swr": "^2.2.4",
+    "tesseract.js": "^6.0.1",
     "victory": "^36.6.12",
     "zod": "^3.22.4",
     "zod-formik-adapter": "^1.2.0"
